<resources>
    <string name="language">语言</string>
    <string name="china">中文</string>
    <string name="english">English</string>
    <string name="app_name">LimoWallet</string>
    <string name="create_wallet">创建钱包</string>
    <string name="import_wallet">导入钱包</string>
    <string name="wallet_name">请输入钱包名称</string>
    <string name="wallet_Password">请输入密码</string>
    <string name="repeat_password">请重复输入密码</string>
    <string name="lowest_password">密码不能低于8位数</string>
    <string name="create_success">创建成功</string>
    <string name="dissimilarity">两次密码不一致</string>
    <string name="rb_wallet">钱包</string>
    <string name="rb_application">应用</string>
    <string name="rb_my">我的</string>
    <string name="language_cn">中文</string>
    <string name="language_en">ENGLISH</string>
    <string name="press_exit_again">在按一次退出</string>
    <string name="input_tips">复制粘贴以太坊官方钱包的 Keystore 文件内容至输入框，或通过扫描Keystore内容生成的二维码录入。</string>
    <string name="input_zjc_text">使用助记词导入的同时可以修改钱包密码。</string>
    <string name="input_key_text">输入 Private Key 文件内容至输入框，请留意字符大小写。</string>
    <string name="keystore_text">Keystore 文件内容</string>
    <string name="zjc_text">输入助记词，用空格分隔</string>
    <string name="wellet_name">钱包名称</string>
    <string name="wellet_psd">钱包密码</string>
    <string name="establish">立即创建</string>
    <string name="no_less_than">不少于8位字符，建议混合大小写字母，数字，符号</string>
    <string name="welcome_to_lemon_wallet">欢迎使用柠檬钱包</string>
    <string name="first_use">首次使用区块链钱包</string>
    <string name="establish_title">一键创建属于你的区块链钱包，告别繁琐，从此小白变高手</string>
    <string name="skilled_use">熟练使用区块链钱包</string>
    <string name="import_hint">创建或导入去中心化钱包，安全存币，转币</string>
    <string name="etc_wallet">创建BTC/EOS/USDT/ETC钱包</string>
    <string name="wallet_assistant">支持主流钱包助手、私钥、keystone导入</string>
    <string name="confirm_wallet">确认钱包密码</string>
    <string name="password_tilps_mas">密码提示信息</string>
    <string name="back_up_immediately">创建完成后，立即备份</string>
    <string name="immediate_backup">立即备份</string>
    <string name="please_record_the">请在安全环境按顺序记录助记词并妥善保存</string>
    <string name="backup_mnemonics">备份助记词</string>
    <string name="backup_hints">备份提示</string>
    <string name="getting_private_key">获得私钥等于拥有钱包资产所有权</string>
    <string name="use_paper_and_pen">使用纸和笔正确抄写助记词 如果你的手机丢失、被盗、损坏，助记词将可以恢复你的资产</string>
    <string name="offline_custody">离线保管</string>
    <string name="keep_it_if_place">妥善保管至隔离网络的安全地方 请勿将助记词在联网环境下分享和存储，比如邮件、相册、社交应用等</string>
    <string name="no_screenshots">请勿截屏</string>
    <string name="screenshot_sharing_and_storage">截屏分享和存储可能被恶意软件收集，造成资产损失</string>
    <string name="next_step">下一步</string>
    <string name="got_it">知道了</string>
    <string name="cancel">取消</string>
    <string name="confirm_mnemonic">确认助记词</string>
    <string name="confirmation_steps">请按顺序点击助记词，以确认您正确备份</string>

</resources>
